# gif

app/: build.gradle
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FrameSequence_gif.cpp
app/src/main/java/com/example/giflib/: MainActivity.java
app/src/main/java/com/example/giflib/gif/: FrameSequenceDecoder.java  FrameSequenceDrawableResource.java  GifExtensions.java  GlideGifModule.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
